Creación de todos los entities

--- a/Lab4_20220270/src/main/resources/application.properties
+++ b/Lab4_20220270/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=Lab4_20220270
+spring.datasource.url=jdbc:mysql://localhost:3306/lab4
+spring.datasource.username=root
+spring.datasource.password=root
+server.port=8081
